# Anomaly-and-Fraud-detection-

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_streaming.md  docker-compose.infra.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
fraud-dashboard/: Dockerfile  default.conf.template  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
fraud-dashboard/src/: App.tsx  index.css
fraud-dashboard/src/api/: client.ts
fraud-dashboard/src/components/: AlertPanel.tsx  FraudRateChart.tsx  LiveTransactionFeed.tsx  MetricCards.tsx  ModelHealth.tsx
fraud-dashboard/src/hooks/: useWebSocket.ts
fraud-dashboard/src/types/: index.ts
models/: isolation_forest.pkl  xgboost_fraud.pkl
scripts/: deploy_aws.sh  seed_demo.py
src/alerts/: engine.py
src/api/: main.py  schemas.py
src/api/middleware/: latency.py
src/api/routes/: predict.py
src/data/: loader.py
src/db/: models.py  session.py
src/feature_store/: redis_client.py
src/features/: engineer.py
src/models/: anomaly.py  ensemble.py  train.py
src/streaming/: consumer.py  producer.py  spark_aggregator.py
tests/: conftest.py  test_ensemble.py  test_predict.py
