[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Real-time fraud detection pipeline and inference server"
requires-python = ">=3.11"
dependencies = [
    # ML & Core
    "pandas==2.2.1",
    "numpy==1.26.4",
    "scikit-learn==1.4.1.post1",
    "xgboost==2.0.3",
    "imbalanced-learn==0.12.0",
    
    # Streaming & Infra
    "confluent-kafka==2.3.0",
    "redis==5.0.3",
    "sqlalchemy[asyncio]==2.0.28",
    "asyncpg==0.29.0",
    "python-dotenv==1.0.1",
    
    # API
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "prometheus-fastapi-instrumentator==7.0.0",
    "httpx==0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "ruff==0.3.4"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = "."
